--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import-normalize; /* bring in normalize.css styles */
 
 body {
   margin: 0;
@@ -9,6 +8,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
+}
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
